--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1069,6 +1069,15 @@ body {
 .cid-rlZM9TN9m2 .panel-text {
   text-align: center;
 }
+.cid-rlZM9TN9m2 .command {
+  background-color: black;
+  padding: 6px;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+.cid-rlZM9TN9m2 .panel-text SPAN {
+  color: #f4f8fa;
+}
 .cid-rm0n5WBxkr {
   padding-top: 30px;
   padding-bottom: 90px;
@@ -1139,6 +1148,10 @@ body {
   -webkit-box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
   box-shadow: 0px 0px 30px rgba(115, 128, 157, 0.1);
   border-radius: .25rem;
+}
+.cid-rm0n5WBxkr .card-title,
+.cid-rm0n5WBxkr .card-img {
+  color: #ffffff;
 }
 .cid-rlZtr50cPp {
   padding-top: 45px;
