create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1092,7 +1092,7 @@ body {
   padding: .5rem 1rem .5rem 6.5rem;
   margin-left: -2rem;
   margin-bottom: 0;
-  background: linear-gradient(90deg, #f0db4f, #f0db4f);
+  background: linear-gradient(90deg, #188ef4, #188ef4);
   border-top-right-radius: .25rem;
   border-bottom-right-radius: .25rem;
 }
